<resources>
    <string name="app_name">PowerTunes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="unknown_artist">Unknown Artist</string>

    <string name="unknown_album">Unknown Album</string>
    <string name="unknown_song">Unknown Song</string>

    <string name="label_stop">Stop</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_play_pause">Play and pause toggle</string>
    <string name="label_previous">Previous track</string>
    <string name="label_next">Next track</string>
    <string name="no_song">Tap Me To Scan Library</string>
    <string name="recently_added">Last Added</string>
    <string name="recently_played">Last Played</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="queue">Queue</string>
    <string name="select_all">All</string>
    <string name="select_close">Close</string>
    <string name="select_playlist">Playlist</string>
    <string name="select_queue">Queue</string>
    <string name="select_album_art">Album Art</string>
    <string name="select_share">Share</string>
    <string name="select_edit_info">Edit Info</string>
    <string name="select_delete">Delete</string>
    <string name="select_remove">Remove</string>
    <string name="added_x_songs_into_playlist_x">Added %1$d songs into the playlist %2$s.</string>
    <string name="could_not_create_playlist">Could not create playlist</string>
    <string name="created_playlist_x">Created playlist %1$s.</string>
    <string name="playlists">Playlists</string>
    <string name="new_playlist_title">New Playlist</string>
    <string name="create_action">Create</string>
    <string name="playlist_name_empty">Playlist Name</string>
    <string name="playlist_exists">Playlist %1$s already exists.</string>
    <string name="action_new_playlist">New Playlist</string>
    <string name="select_to_add_new_playlists">Select Songs To Add New Playlists</string>
    <string name="search_bar_text">Search</string>
    <string name="all_songs">All Songs</string>
    <string name="last_added">Last Added</string>
    <string name="edit_title_text">Title</string>
    <string name="edit_track_text">Track</string>
    <string name="edit_year_text">Year</string>
    <string name="edit_genre_text">Genre</string>
    <string name="edit_artist_text">Artist</string>
    <string name="edit_album_text">Album</string>
    <string name="permissions_denied">Enable permissions to allow the app to find songs on your device.</string>
    <string name="permissions_open_settings">Permissions are required to be able to fetch songs from storage. Change permissions in device settings.</string>
    <string name="songs_scan_prepare">Preparing&#8230;</string>
    <string name="songs_scanning">Scanning: %1$d%%</string>
    <string name="songs_scanned">%1$d Songs Scanned.</string>
</resources>
