<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?dialogPreferredPadding"
        android:layout_marginStart="?dialogPreferredPadding"
        android:layout_marginEnd="?dialogPreferredPadding"
        android:text="@string/edit_title_text" />
    <EditText
        android:id="@+id/editTagTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="?dialogPreferredPadding"
        android:layout_marginEnd="?dialogPreferredPadding"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="?dialogPreferredPadding"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_track_text" />
            <EditText
                android:id="@+id/editTagTrack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_year_text" />
            <EditText
                android:id="@+id/editTagYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_genre_text" />
            <Spinner
                android:id="@+id/editTagGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="?dialogPreferredPadding"
        android:layout_marginEnd="?dialogPreferredPadding"
        android:text="@string/edit_artist_text" />
    <EditText
        android:id="@+id/editTagArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="?dialogPreferredPadding"
        android:layout_marginEnd="?dialogPreferredPadding"
        android:layout_marginBottom="?dialogPreferredPadding"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="?dialogPreferredPadding"
        android:layout_marginEnd="?dialogPreferredPadding"
        android:text="@string/edit_album_text" />
    <EditText
        android:id="@+id/editTagAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="?dialogPreferredPadding"
        android:layout_marginEnd="?dialogPreferredPadding"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="?dialogPreferredPadding">
        <Button
            android:id="@+id/closeEditDialogBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/alphabet_background_color"
            android:layout_toStartOf="@id/saveEditDialogBtn"
            android:text="cancel"/>
        <Button
            android:id="@+id/saveEditDialogBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/alphabet_background_color"
            android:layout_alignParentEnd="true"
            android:text="save"/>
    </RelativeLayout>

</LinearLayout>