<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/songItemLayout"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@drawable/song_item_shape"
    android:clickable="true"
    android:focusable="true">

    <FrameLayout
        android:id="@+id/imageFrameLayout"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_centerInParent="true"
        android:layout_alignParentStart="true"
        >

        <ImageView
            android:id="@+id/songItemImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </FrameLayout>

<!--layout for name and artist -->
    <RelativeLayout
        android:id="@+id/songNameAndArtistLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/imageFrameLayout">

        <TextView
            android:id="@+id/songItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_song"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/alphabet_background_color"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="15sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/songItemArtistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_artist"
            android:maxLength="20"
            android:textSize="13sp"
            android:textColor="@color/alphabet_background_color"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            />

        <TextView
            android:id="@+id/songItemAlbumName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_album"
            android:textSize="13sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="@color/alphabet_background_color"
            android:layout_toEndOf="@+id/songItemArtistName"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <ImageView
        android:id="@+id/songItemDragHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone"
        android:src="@drawable/ic_drag_handle_black_24dp"/>
</RelativeLayout>